--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["Burunoheck <brunoreeck6@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8.10"
 Django = "^4.1.1"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 
