--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ djangorestframework-simplejwt = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+black = {version = "^22.10.0", allow-prereleases = true}
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
