--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,17 @@
 [tool.poetry]
-name = "back-fitme"
+name = "back"
 version = "0.1.0"
 description = ""
-authors = ["Burunoheck <brunoreeck6@gmail.com>"]
+authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8.10"
-Django = "^4.1.1"
-djangorestframework = "^3.14.0"
+python = "^3.8"
+Django = "^4.1.2"
 django-cors-headers = "^3.13.0"
+djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
-
-[tool.poetry.group.dev.dependencies]
-black = {version = "^22.10.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
