--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ python = "^3.8"
 Django = "^4.1.2"
 django-cors-headers = "^3.13.0"
 djangorestframework = "^3.14.0"
-djangorestframework-simplejwt = "^5.2.2"
 drf-spectacular = "^0.24.2"
 
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.10.1"
+black = {version = "^22.10.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
