--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ Django = "^4.1.2"
 django-cors-headers = "^3.13.0"
 djangorestframework = "^3.14.0"
 drf-spectacular = "^0.24.2"
+django-environ = "^0.9.0"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 
