--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ djangorestframework = "^3.14.0"
 drf-spectacular = "^0.24.2"
 django-environ = "^0.9.0"
 mysqlclient = "^2.1.1"
+gunicorn = "^20.1.0"
+whitenoise = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 
